<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="150dp" >

	    <ImageView
	        android:id="@+id/ivTrailIcon"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:scaleType="centerCrop"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignParentTop="true"
	        android:src="@drawable/filler_land" />
	
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_alignParentBottom="true"
	        android:background="#BB000000"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="15dp"
	        android:paddingRight="15dp" >
	
	        <TextView
	            android:id="@+id/tvTrailName"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/tvTrailName"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:textColor="@color/light" />
	
	        <TextView
	            android:id="@+id/tvTime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/tvTrailName"
	            android:layout_alignParentBottom="true"
	            android:layout_alignStart="@+id/tvTrailName"
	            android:text="@string/tvTime"
	            android:textColor="@color/light_grey"
	            android:textSize="16sp" />
	
	    </RelativeLayout>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvHintText"
            android:background="@color/light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/bPickCrumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bPickCrumb"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
            <!-- android:background="@drawable/rating_rectangle" --> 
            
        
    </LinearLayout>
    
    

</LinearLayout>
