<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dp" >

    <ImageView
        android:id="@+id/ivTrailIconSearch"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/filler_land" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#BB000000"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tvTrailNameSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTrailName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/light" />

        <TextView
            android:id="@+id/tvTimeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvTrailNameSearch"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tvTrailNameSearch"
            android:text="@string/tvTime"
            android:textColor="@color/light_grey"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvRatingSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:paddingRight="15dp"
        android:text="@string/iRating"
        android:textSize="25sp"
        android:textColor="@color/dark_grey"
        android:background="@drawable/rating_rectangle" />
    
</RelativeLayout>